discussion/kv_engine/180289/180289_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Use Cookie::notifyIoComplete

Remove the C-style free function

Change-Id: I490053d782c89b56417e81a3e9a008c6b3275703

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-09-22 07:34:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-22 07:40:21.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49578/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49578/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41670/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41670/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10272/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10272/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23706/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23706/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22540/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22540/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21927/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21927/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22912/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22912/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10371/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10371/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30942/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30942/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20564/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:1198:8: error: member access into incomplete type "FrontEndThread" [clang-diagnostic-error]
    thr.eventBase.runInEventBaseThreadAlwaysEnqueue([this, status]() {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:34:8: note: forward declaration of "FrontEndThread"
struct FrontEndThread;
       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20564/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:1198:8:
error: member access into incomplete type "FrontEndThread" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20564/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19789/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
